configuration swagger for authenticate
